# WindowsLogger

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/DemoApplication/: CMakeLists.txt  main.cxx
include/WindowsLogger/: ConsoleLogger.hxx  ILogger.hxx
src/: CMakeLists.txt  ConsoleLogger.cxx
